syntax = "proto3";

package api;

option go_package = ".;proto";


service ApiTransactions {
       rpc SendTransaction (TransactionRequest) returns (TransactionReply) {}
  }
  
  message TransactionRequest {
    bytes from = 1;
    bytes to = 2;
    bytes id = 3;
    bytes signature = 4;
    bytes data = 5; 
  }
  
  message TransactionReply {
    int32 status = 1;
    string errorDescription = 2;
    uint64 recievedTime = 3;
  }
